test/test_error_missing_bracket.lin
// RUN: not %linc build %s -o %t 2>&1 | FileCheck %s

// CHECK: error: Expect '[' before block.

42 )